--- a/README.html
+++ b/README.html
@@ -57,7 +57,7 @@ $border-radius: 3px;
 </code></pre><h3 id="text-alignments">Text Alignments</h3>
 <p>To be able to align text left, right or centrally within the markup, there are 4 classes available!</p>
 <p><em>To use</em></p>
-<pre><code>    &lt;div class=&quot;small-12 medium-6 large-3 columns small-text-center medium-text-right large-text-left xlarge-text-center&quot;&gt;column&lt;/div&gt;
+<pre><code>&lt;div class=&quot;small-text-center medium-text-right large-text-left xlarge-text-center&quot;&gt;Align me!&lt;/div&gt;
 </code></pre><h3 id="atom-users-">Atom Users!</h3>
 <p>If you use Atom - this handy snippet allows for easy autofill of sizes! Be a faster dev</p>
 <pre><code>&#39;.source.css.scss&#39;:
