--- a/README.html
+++ b/README.html
@@ -21,7 +21,7 @@
 <h3 id="defining-variables">Defining Variables</h3>
 <pre><code>$grid-gutter-medium: 30px !default;
 $grid-gutter-small: 20px !default;
-$global-width: rem-calc(1200px);
+$global-width: 1200px;
 $grid-max-width: $global-width + ($grid-gutter-medium * 2) !default;
 $grid-columns: 12 !default;
 
