--- a/README.html
+++ b/README.html
@@ -12,10 +12,10 @@
 <p>Cattle grid contains not only a very simple grid (only 5KB minified!) but a small suite of extra settings I&#39;ve collected over the years of doing Front End. Unlike most frameworks, this grid is easy to isolate and use on it&#39;s own - the rest is just for sheer aesthetics and laziness!</p>
 <p>To isolate the grid, navigate to <a href="https://github.com/ceryni173/Cattle-Grid/blob/master/assets/scss/general/_grid.scss">grid.scss</a> and add this to your own project! Simple.</p>
 <p>If you wish to use the entire project, the folder structure is very simple.</p>
-<h4 id="general">General</h4>
+<h4 id="base">Base</h4>
 <p>General contains all files needed to set up a new site, from colours, helpers, form elements and mixins</p>
-<h4 id="specific">Specific</h4>
-<p>Specific contains files related to the project you&#39;re about to build.</p>
+<h4 id="site">Site</h4>
+<p>Site contains files related to the project you&#39;re about to build.</p>
 <p><em>I use an autoprefixer on my scss!</em></p>
 <hr>
 <h3 id="defining-variables">Defining Variables</h3>
@@ -228,14 +228,13 @@ color: $primaryText;
 @include fade(show)
 </code></pre><hr>
 <h2 id="extends">Extends</h2>
-<h3 id="alignment">Alignment</h3>
+<h3 id="alignment-positioning">Alignment &amp; Positioning</h3>
 <pre><code>// Columns in a flex grid can be aligned horizontal or vertical inside of their parent.
-    .middle-all{
+    .align-all {
+        display: flex;
         align-items: center;
         justify-content: center;
-        display: flex;
         flex-direction: column;
-        align-items: center;
     }
 
     .align-middle {
@@ -281,16 +280,29 @@ color: $primaryText;
         transform: translate(-50%, -50%);
     }
 </code></pre><p><em>To use:</em></p>
-<pre><code>@extend .middle-all
-@extend .horizontal-center
-@extend .vertical-center
-@extend .absolute-center
+<pre><code>@extend .align-all;
+@extend .horizontal-center;
+@extend .vertical-center;
+@extend .absolute-center;
 
 &lt;div class=&quot;container&quot;&gt;
-    &lt;div class=&quot;row align-center align-middle&quot;&gt;
+    &lt;div class=&quot;row align-all&quot;&gt;
         &lt;div class=&quot;small-12 medium-6 columns align-self-top&quot;&gt;column&lt;/div&gt;
-        &lt;div class=&quot;small-12 medium-6 columns align-self-middle column&lt;/div&gt;
+        &lt;div class=&quot;small-12 medium-6 columns align-self-middle&quot;&gt; column&lt;/div&gt;
         &lt;div class=&quot;small-12 medium-6 columns align-self-bottom&quot;&gt;column&lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;row&quot;&gt;
+        &lt;div class=&quot;small-12 columns&quot;&gt;
+            &lt;div class=&quot;box horizontal-center align-all&quot;&gt;
+                horizontal-center
+            &lt;/div&gt;
+            &lt;div class=&quot;box vertical-center align-all&quot;&gt;
+                vertical-center
+            &lt;/div&gt;
+            &lt;div class=&quot;box absolute-center align-all&quot;&gt;
+                absolute-center
+            &lt;/div&gt;
+        &lt;/div&gt;
     &lt;/div&gt;
 &lt;/div&gt;
 </code></pre><hr>
