--- a/README.html
+++ b/README.html
@@ -235,6 +235,7 @@ color: $primaryText;
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        text-align: center;
     }
 
     .align-middle {
@@ -263,20 +264,22 @@ color: $primaryText;
         position: absolute;
         left: 50%;
         top: auto;
-        transform: translatey(-50%);
+        transform: translateX(-50%);
     }
 
+    // Vertically centers the element
     .vertical-center {
         position: absolute;
         left: auto;
         top: 50%;
-        transform: translatex(-50%);
+        transform: translateY(-50%);
     }
 
+    // Abolutely centers the element
     .absolute-center {
         position: absolute;
-        left: 50%;
         top: 50%;
+        left: 50%;
         transform: translate(-50%, -50%);
     }
 </code></pre><p><em>To use:</em></p>
