--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div id="fades"></div>
+				<div id="positioning"></div>
 				<div class="small-12 columns">
 					<hr/>
 					<strong>Positioning</strong>
