--- a/README.html
+++ b/README.html
@@ -174,7 +174,7 @@ color: $primaryText;
 @mixin h1 {
     @include heading;
     font-size: rem-calc(40);
-    @include breakpoint($smallOnly) {
+    @include breakpoint($small-only) {
         font-size: rem-calc(30);
     }
 }
