--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 <body>
 	<main>
 		<nav>
+			<div class="notification">
+				<p> Looking for the <strong class="alone"> Cattle Grid</strong> Wordpress theme? <a target="_blank" href="https://www.usecattlegrid.com/wordpress">Head on over!</a>&nbsp;<span class="fa fa-wordpress"></span></p>
+			</div>
 			<ul>
 				<li><a href="#grid">Grid</a></li>
 				<li><a href="#positioning">Positioning</a></li>
@@ -90,7 +93,7 @@
 				</div>
 				<div class="small-12 columns">
 					<p>Finally got around to building my own CSS Framework after becoming too annoyed at the reliance on the likes of a Foundation & Bootstrap. Foundation served me well for years, but it’s too bloated and too contaminated with elements that could be refactored and simplified. </p>
-					<p>Which leads me, to this! I now have my simple 5kb responsive flex box grid I’ve named the Cattle Grid 🐮 - If you want just the grid, grab <strong class="alone">_grid.scss</strong> from <em> assets/scss/general</em> and import it into your stylesheets!</p>
+					<p>Which leads me, to this! I now have my simple (under 20kb) responsive flex box grid I’ve named the Cattle Grid 🐮 - If you want just the grid, grab <strong class="alone">_grid.scss</strong> from <em> assets/scss/general</em> and import it into your stylesheets!</p>
 				</div>
 			</div>
 			<div id="grid"></div>
