Updated readme + links

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 				<div class="small-12 columns">
 					<p>Finally got around to building my own CSS Framework after becoming too annoyed at the reliance on the likes of a Foundation & Bootstrap. Foundation served me well for years, but it’s too bloated and too contaminated with elements that could be refactored and simplified. </p>
 					<p>Which leads me, to this! I now have my simple (under 20kb) responsive flex box grid I’ve named the Cattle Grid 🐮 - If you want just the grid, grab <strong class="alone">_grid.scss</strong> from <em> assets/scss/general</em> and import it into your stylesheets!</p>
+					<p>The repo for the entire codebase can be found over on <a target="_blank" href="https://gitlab.com/Ceryni/cattle-grid">GitLab <span class="fa fa-gitlab" aria-hidden="true"></span></a>
 				</div>
 			</div>
 			<div id="grid"></div>
