--- a/README.html
+++ b/README.html
@@ -4,10 +4,10 @@
         <title>README.md</title>
       </head>
       <body>
-        <p><img src="http://ceryni.com/cattle-grid/assets/images/logo-type-small.png" alt="Cattle Grid"></p>
+        <p><img src="https://usecattlegrid.com/assets/images/logo-type-small.png" alt="Cattle Grid"></p>
 <p>Extremely lightweight, basic flex grid built from a simple mixin</p>
 <h2 id="demo">Demo</h2>
-<p><a href="http://ceryni.com/cattle-grid/">Cattle Grid Example</a>   </p>
+<p><a href="https://usecattlegrid.com">Cattle Grid Example</a>   </p>
 <h2 id="getting-started">Getting Started</h2>
 <p>Cattle grid contains not only a very simple grid (only 5KB minified!) but a small suite of extra settings I&#39;ve collected over the years of doing Front End. Unlike most frameworks, this grid is easy to isolate and use on it&#39;s own - the rest is just for sheer aesthetics and laziness!</p>
 <p>To isolate the grid, navigate to <a href="https://github.com/ceryni173/Cattle-Grid/blob/master/assets/scss/base/_grid.scss">grid.scss</a> and add this to your own project! Simple.</p>
