More slight styling

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 					</div>
 					<div class="row">
 						<div id="buttons"></div>
-						<div class="columns small-12">
+						<div class="small-12 columns buttons-links">
 							<strong>Buttons</strong>
 							<a class="button primary"> Primary</a>
 							<a class="button primary hollow"> Primary</a>
