--- a/index.html
+++ b/index.html
@@ -494,6 +494,15 @@
 					</div>
 				</div>
 			</div>
+			<footer>
+				<div class="row align-middle align-center">
+					<div class="small-12 columns text-center">
+						<p class="small">
+							Copyright 2019 Cattle Grid - Proudly Created by <a href="http://ceryni.com" target="_blank">Ceryni</a> <span class="fa fa-heart-o"></span>
+						</p>
+					</div>
+				</div>
+			</footer>
 		</div>
 	</main>
 </body>
