--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 					</div>
 					<div class="row">
 						<div class="small-12 columns text-center">
-							<img src="./assets/images/logo-type.png" class="logo">
+							<img src="./assets/images/logo-type.png" class="Cattle Grid CSS Framework logo">
 						</div>
 						<div class="small-12 columns">
-							<p>Finally got around to building my own CSS Framework after becoming too annoyed at the reliance on the likes of a Foundation & Bootstrap. Foundation served me well for years, but it’s too bloated and too contaminated with elements that could be refactored and simplified. </p>
-							<p>Which leads me, to this! I now have my simple (under 20kb) responsive flex box grid I’ve named the Cattle Grid 🐮 - If you want just the grid, grab <strong class="alone">_grid.scss</strong> from <em> assets/scss/general</em> and import it into your stylesheets!</p>
+							<p>Finally got around to building my own <strong>Simple CSS Framework</strong> after becoming too annoyed at the reliance on the likes of a Foundation & Bootstrap. Foundation served me well for years, but it’s too bloated and too contaminated with elements that could be refactored and simplified. </p>
+							<p>Which leads me to this! I now have my simple (under 20kb) responsive flex box grid I’ve named the Cattle Grid 🐮 - If you want just the css grid, grab <strong class="alone">_grid.scss</strong> from <em> assets/scss/base</em> and import it into your stylesheets!</p>
 							<p>The repo for the entire codebase can be found over on <a target="_blank" href="https://gitlab.com/Ceryni/cattle-grid">GitLab <span class="fa fa-gitlab" aria-hidden="true"></span></a>
 						</div>
 					</div>
@@ -455,24 +455,24 @@
 							<strong>Image Filters</strong>
 						</div>
 						<div class="small-12 medium-3 columns text-center">
-							<img src="https://picsum.photos/300/300/?random">
+							<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework - Example image filter">
 							<p>Normal</p>
 						</div>
 						<div class="small-12 medium-3 columns text-center">
 							<div class="imgFilter overlay">
-								<img src="https://picsum.photos/300/300/?random">
+								<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework - Example image filter">
 							</div>
 							<p>Overlay</p>
 						</div>
 						<div class="small-12 medium-3 columns text-center">
 							<div class="imgFilter greyScale">
-								<img src="https://picsum.photos/300/300/?random">
+								<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework - Example image filter">
 							</div>
 							<p>Greyscale</p>
 						</div>
 						<div class="small-12 medium-3 columns text-center">
 							<div class="imgFilter blur">
-								<img src="https://picsum.photos/300/300/?random">
+								<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework - Example image filter">
 							</div>
 							<p>Blur</p>
 						</div>
