--- a/index.html
+++ b/index.html
@@ -124,31 +124,37 @@
 								Level 1 heading
 							</h1>
 							<p>
-								Sed scelerisque sagittis lorem. Phasellus sodales. Nulla urna justo, vehicula in, suscipit nec, molestie sed, tellus.
+								H1 Headline at 40px
 							</p>
 							<h2>
 								Level 02 Heading
 							</h2>
 							<p>
-								Sed scelerisque sagittis lorem. Phasellus sodales. Nulla urna justo, vehicula in, suscipit nec, molestie sed, tellus.
+								H2 Headline at 30px
 							</p>
 							<h3>
 								Level 03 Heading
 							</h3>
 							<p>
-								Sed scelerisque sagittis lorem. Phasellus sodales. Nulla urna justo, vehicula in, suscipit nec, molestie sed, tellus.
+								H3 Headline at 25px
 							</p>
 							<h4>
 								Level 04 Heading
 							</h4>
 							<p>
-								Sed scelerisque sagittis lorem. Phasellus sodales. Nulla urna justo, vehicula in, suscipit nec, molestie sed, tellus.
+								H4 Headline at 20px
 							</p>
 							<h5>
 								Level 05 Heading
 							</h5>
 							<p>
-								Sed scelerisque sagittis lorem. Phasellus sodales. Nulla urna justo, vehicula in, suscipit nec, molestie sed, tellus.
+								H5 Headline at 18px
+							</p>
+							<h6>
+								Level 06 Heading
+							</h6>
+							<p>
+								H6 Headline at 16px
 							</p>
 							<hr/>
 						</div>
@@ -156,7 +162,7 @@
 						<div class="columns small-12">
 							<strong>List items</strong>
 							<ul>
-								<li>This is a list item</li>
+								<li>This is a list item in the Cattle Grid</li>
 								<li>So is this - there could be more</li>
 								<li>Make sure to style list items to:
 									<ul>
@@ -174,15 +180,15 @@
 						<div class="columns small-12">
 							<strong>Ordered lists</strong>
 							<ol>
-								<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-								<li>Aliquam tincidunt mauris eu risus.
+								<li>This is an ordered list in the Cattle Grid</li>
+								<li>So is this - there could be more
 									<ol>
-										<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-										<li>Aliquam tincidunt mauris eu risus.</li>
+										<li>Not forgetting child list items</li>
+										<li>Not forgetting child list items</li>
 									</ol>
 								</li>
-								<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-								<li>Aliquam tincidunt mauris eu risus.</li>
+								<li>A couple more</li>
+								<li>top level list items</li>
 							</ol>
 							<hr/>
 						</div>
@@ -238,7 +244,7 @@
 							<strong>Block Quotes</strong>
 							<blockquote>
 								<p>
-									“Ooh - a blockquote! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.”
+									“A blockquote! I may as well take the time to talk more about what makes the <a target="_blank" href="https://gitlab.com/Ceryni/cattle-grid">Cattle Grid CSS Framework</a> a worth while choice when starting a new project. If you've ever decided to use a framework and realised just how bloated it is, you will notice files absolutely everywhere - and you know you can't remove them as it will just collapse, but you have no use for them at all, so you're stuck. This is where the <a target="_blank" href="https://gitlab.com/Ceryni/cattle-grid">Cattle Grid</a> is different, - you can nuke whatever you want! So long as you have your grid, your settings and your config file - the rest is up to you!
 								</p>
 							</blockquote>
 							<hr/>
@@ -246,9 +252,9 @@
 						<div class="columns small-12">
 							<strong>Block Quotes with Cite</strong>
 							<blockquote>
-								<p><em>This is a properly formatted blockquote, btw.</em> Measuring programming progress by lines of code is like measuring aircraft building progress by weight.</p>
+								<p><em>Continuining on from above.. </em> The files I've added into the base folder are just things I think could be useful, but they're not a necessity. If you like how this is organised and structured, just wait until you see the <a target="_blank" href="https://www.usecattlegrid.com/wordpress">Wordpress theme</a>!</p>
 								<footer>
-									— <cite><a href="http://www.thegatesnotes.com">Bill Gates</a></cite>
+									— <cite><a href="http://www.ceryni.com">Ceryni</a></cite>
 								</footer>
 							</blockquote>
 							<hr/>
