Updating title & description tags

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Cattle Grid</title>
-	<meta name="description" content="Extremely lightweight, basic flex css grid built from a simple mixin">
+	<title>Cattle Grid | A simple, extendable, configurable CSS Flexbox Framework for developers</title>
+	<meta name="description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers">
 	<meta name="keywords" content"CattleGrid, Cattle Grid, CSS Framework, CSS Grid, FlexBox Grid, Flexgrid, Simple CSS Grid" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicons -->
@@ -462,24 +462,24 @@
 							<strong>Image Filters</strong>
 						</div>
 						<div class="small-12 medium-3 columns text-center">
-							<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework -    image filter">
+							<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework - image filter">
 							<p>Normal</p>
 						</div>
 						<div class="small-12 medium-3 columns text-center">
 							<div class="imgFilter overlay">
-								<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework -    image filter">
+								<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework - image filter">
 							</div>
 							<p>Overlay</p>
 						</div>
 						<div class="small-12 medium-3 columns text-center">
 							<div class="imgFilter greyScale">
-								<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework -    image filter">
+								<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework - image filter">
 							</div>
 							<p>Greyscale</p>
 						</div>
 						<div class="small-12 medium-3 columns text-center">
 							<div class="imgFilter blur">
-								<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework -    image filter">
+								<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework - image filter">
 							</div>
 							<p>Blur</p>
 						</div>
