--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Cattle Grid | A simple, extendable, configurable CSS Flexbox Framework for developers</title>
+	<title>Cattle Grid | A simple, configurable CSS Flexbox Framework for Developers</title>
 	<meta name="description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers">
 	<meta name="keywords" content"CattleGrid, Cattle Grid, CSS Framework, CSS Grid, FlexBox Grid, Flexgrid, Simple CSS Grid" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
