Canonical link updated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers">
 	<meta name="keywords" content"CattleGrid, Cattle Grid, CSS Framework, CSS Grid, FlexBox Grid, Flexgrid, Simple CSS Grid" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link href="https://usecattlegrid.com" rel="canonical" />
 	<!-- Favicons -->
 	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="./assets/images/apple-touch-icon-57x57.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="./assets/images/apple-touch-icon-114x114.png" />
