--- a/index.html
+++ b/index.html
@@ -463,24 +463,24 @@
 							<strong>Image Filters</strong>
 						</div>
 						<div class="small-12 medium-3 columns text-center">
-							<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework - image filter">
+							<img src="./assets/images/cattlegrid.jpg" alt="Cattle Grid CSS Framework - image filter">
 							<p>Normal</p>
 						</div>
 						<div class="small-12 medium-3 columns text-center">
 							<div class="imgFilter overlay">
-								<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework - image filter">
+								<img src="./assets/images/cattlegrid.jpg" alt="Cattle Grid CSS Framework - image filter">
 							</div>
 							<p>Overlay</p>
 						</div>
 						<div class="small-12 medium-3 columns text-center">
 							<div class="imgFilter greyScale">
-								<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework - image filter">
+								<img src="./assets/images/cattlegrid.jpg" alt="Cattle Grid CSS Framework - image filter">
 							</div>
 							<p>Greyscale</p>
 						</div>
 						<div class="small-12 medium-3 columns text-center">
 							<div class="imgFilter blur">
-								<img src="https://picsum.photos/300/300/?random" alt="Cattle Grid CSS Framework - image filter">
+								<img src="./assets/images/cattlegrid.jpg" alt="Cattle Grid CSS Framework - image filter">
 							</div>
 							<p>Blur</p>
 						</div>
