Link to photographer

--- a/index.html
+++ b/index.html
@@ -461,6 +461,10 @@
 						<div class="small-12 columns">
 							<hr/>
 							<strong>Image Filters</strong>
+							<p class="small">
+								Thankyou to <a target="_blank" rel="nofollow" href="https://unsplash.com/@bryanminear">Bryan Minear</a> for the amazing image of the Cattle!
+							</p>
+							<br/>
 						</div>
 						<div class="small-12 medium-3 columns text-center">
 							<img src="./assets/images/cattlegrid.jpg" alt="Cattle Grid CSS Framework - image filter">
