--- a/README.html
+++ b/README.html
@@ -10,7 +10,7 @@
 <p><a href="https://usecattlegrid.com">Cattle Grid Example</a>   </p>
 <h2 id="getting-started">Getting Started</h2>
 <p>Cattle grid contains not only a very simple (under 20kb) grid as well as a small suite of extra settings I&#39;ve collected over the years of doing Front End. Unlike most frameworks, this grid is easy to isolate and use on it&#39;s own - the rest is just for sheer aesthetics and laziness!</p>
-<p>To isolate the grid, navigate to <a href="https://github.com/ceryni173/Cattle-Grid/blob/master/assets/scss/base/_grid.scss">grid.scss</a> and add this to your own project! Simple.</p>
+<p>To isolate the grid, navigate to <a href="https://gitlab.com/Ceryni/cattle-grid/blob/master/assets/scss/base/_grid.scss">grid.scss</a> and add this to your own project! Simple.</p>
 <p>If you wish to use the entire project, the folder structure is very simple.</p>
 <h4 id="base">Base</h4>
 <p>General contains all files needed to set up a new site, from colours, helpers, form elements and mixins</p>
