--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers">
 	<meta name="keywords" content"CattleGrid, Cattle Grid, CSS Framework, CSS Grid, FlexBox Grid, Flexgrid, Simple CSS Grid" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name=”robots” content=”noindex,nofollow”>
 	<link href="https://usecattlegrid.com" rel="canonical" />
 	<!-- Favicons -->
 	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="./assets/images/apple-touch-icon-57x57.png" />
@@ -63,7 +64,7 @@
 					</div>
 					<div class="row">
 						<div class="small-12 columns text-center">
-							<img src="./assets/images/logo-type.png" class="Cattle Grid CSS Framework logo">
+							<img src="./assets/images/logo-type.png" alt="Cattle Grid CSS Framework logo">
 						</div>
 						<div class="small-12 columns">
 							<p>Finally got around to building my own <strong class="alone">Simple CSS Framework</strong> after becoming too annoyed at the reliance on the likes of a Foundation & Bootstrap. Foundation served me well for years, but it’s too bloated and too contaminated with elements that could be refactored and simplified. </p>
