Missing logo class

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					</div>
 					<div class="row">
 						<div class="small-12 columns text-center">
-							<img src="./assets/images/logo-type.png" alt="Cattle Grid CSS Framework logo">
+							<img src="./assets/images/logo-type.png" alt="Cattle Grid CSS Framework logo" class="logo">
 						</div>
 						<div class="small-12 columns">
 							<p>Finally got around to building my own <strong class="alone">Simple CSS Framework</strong> after becoming too annoyed at the reliance on the likes of a Foundation & Bootstrap. Foundation served me well for years, but it’s too bloated and too contaminated with elements that could be refactored and simplified. </p>
