--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!doctype html>
+<!--  Made by ceryni.com
++-+-+-+-+-+-+-+-+-+-+
+|c|e|r|y|n|i|.|c|o|m|
++-+-+-+-+-+-+-+-+-+-+
+All rights reserved. -->
 <html class="no-js" lang="">
 <head>
 	<meta charset="utf-8">
@@ -7,8 +12,28 @@
 	<meta name="description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers">
 	<meta name="keywords" content"CattleGrid, Cattle Grid, CSS Framework, CSS Grid, FlexBox Grid, Flexgrid, Simple CSS Grid" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name=”robots” content=”noindex,nofollow”>
+
 	<link href="https://usecattlegrid.com" rel="canonical" />
+	<meta name="robots" content="index,follow,noodp" />
+	<meta name="author" content="ceryni" />
+	<!-- Schema.org -->
+	<meta itemprop="name" content="Cattle Grid | A simple, configurable CSS Flexbox Framework for Developers" />
+	<meta itemprop="description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers" />
+	<!-- Meta Data -->
+	<meta property="dcterms:title" content="Cattle Grid | A simple, configurable CSS Flexbox Framework for Developers" />
+	<meta property="dcterms:description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers" />
+	<meta name="description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers">
+	<!-- Twitter Cards -->
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@ceryni17" />
+	<meta name="twitter:creator" content="@ceryni17" />
+	<!-- OpenGraph -->
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Cattle Grid | A simple, configurable CSS Flexbox Framework for Developers" />
+	<meta property="og:description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers" />
+	<meta property="og:url" content="https://usecattlegrid.com" />
+	<meta property="og:site_name" content="Cattle Grid" />
+
 	<!-- Favicons -->
 	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="./assets/images/apple-touch-icon-57x57.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="./assets/images/apple-touch-icon-114x114.png" />
