Removed dynamic example link

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ All rights reserved. -->
 						</div>
 						<div class="columns small-12 medium-4">
 							<p>
-								I am <a href="?abc123">the a tag</a>   <br>
+								I am <a href="#">the a tag</a>   <br>
 								I am <abbr title="test">the abbr tag</abbr>   <br>
 								I am <acronym>the acronym tag</acronym>   <br>
 								I am <b>the b tag</b>   <br>
