--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ All rights reserved. -->
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Cattle Grid | A simple, configurable CSS Flexbox Framework for Developers</title>
+	<title>Cattle Grid | A simple, configurable CSS Flexbox Framework</title>
 	<meta name="description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers">
 	<meta name="keywords" content"CattleGrid, Cattle Grid, CSS Framework, CSS Grid, FlexBox Grid, Flexgrid, Simple CSS Grid" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,10 +17,10 @@ All rights reserved. -->
 	<meta name="robots" content="index,follow,noodp" />
 	<meta name="author" content="ceryni" />
 	<!-- Schema.org -->
-	<meta itemprop="name" content="Cattle Grid | A simple, configurable CSS Flexbox Framework for Developers" />
+	<meta itemprop="name" content="Cattle Grid | A simple, configurable CSS Flexbox Framework" />
 	<meta itemprop="description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers" />
 	<!-- Meta Data -->
-	<meta property="dcterms:title" content="Cattle Grid | A simple, configurable CSS Flexbox Framework for Developers" />
+	<meta property="dcterms:title" content="Cattle Grid | A simple, configurable CSS Flexbox Framework" />
 	<meta property="dcterms:description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers" />
 	<!-- Twitter Cards -->
 	<meta name="twitter:card" content="summary_large_image" />
@@ -28,7 +28,7 @@ All rights reserved. -->
 	<meta name="twitter:creator" content="@ceryni17" />
 	<!-- OpenGraph -->
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Cattle Grid | A simple, configurable CSS Flexbox Framework for Developers" />
+	<meta property="og:title" content="Cattle Grid | A simple, configurable CSS Flexbox Framework" />
 	<meta property="og:description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers" />
 	<meta property="og:url" content="https://usecattlegrid.com" />
 	<meta property="og:site_name" content="Cattle Grid" />
@@ -71,17 +71,17 @@ All rights reserved. -->
 						<div class="small-12 columns">
 							<nav>
 								<ul>
-									<li><a href="#grid">Grid</a></li>
-									<li><a href="#positioning">Positioning</a></li>
-									<li><a href="#headlines">Headlines</a></li>
-									<li><a href="#list">Lists</a></li>
-									<li><a href="#tables">Tables</a></li>
-									<li><a href="#quotes">Quotes &amp; Code</a></li>
-									<li><a href="#text">Text</a></li>
-									<li><a href="#form">Form</a></li>
-									<li><a href="#buttons">Buttons</a></li>
-									<li><a href="#images">Images</a></li>
-									<li><a href="#fades">Fades</a></li>
+									<li><a title="Grid anchor" href="#grid">Grid</a></li>
+									<li><a title="Positioning Anchor" href="#positioning">Positioning</a></li>
+									<li><a title="Headline Anchor" href="#headlines">Headlines</a></li>
+									<li><a title="List Anchor" href="#list">Lists</a></li>
+									<li><a title="Tables Anchor" href="#tables">Tables</a></li>
+									<li><a title="Quotes and Code Anchor" href="#quotes">Quotes &amp; Code</a></li>
+									<li><a title="Text Anchor" href="#text">Text</a></li>
+									<li><a title="Form Anchor" href="#form">Form</a></li>
+									<li><a title="Buttons Anchor" href="#buttons">Buttons</a></li>
+									<li><a title="Images Anchor" href="#images">Images</a></li>
+									<li><a title="Fades Anchor" href="#fades">Fades</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -92,8 +92,8 @@ All rights reserved. -->
 						</div>
 						<div class="small-12 columns">
 							<p>Finally got around to building my own <strong class="alone">Simple CSS Framework</strong> after becoming too annoyed at the reliance on the likes of a Foundation & Bootstrap. Foundation served me well for years, but it’s too bloated and too contaminated with elements that could be refactored and simplified. </p>
-							<p>Which leads me to this! I now have my simple (under 20kb) responsive flex box grid I’ve named the Cattle Grid 🐮 - If you want just the css grid, grab <strong class="alone">_grid.scss</strong> from <em> assets/scss/base</em> and import it into your stylesheets!</p>
-							<p>The repo for the entire codebase can be found over on <a target="_blank" href="https://gitlab.com/Ceryni/cattle-grid">GitLab <span class="fa fa-gitlab" aria-hidden="true"></span></a>
+							<p>Which leads me to this! I now have my simple (under 20kb) configurable css flexbox framework I’ve proudly named the Cattle Grid 🐮 - If you want just the css grid, grab <strong class="alone">_grid.scss</strong> from <em> assets/scss/base</em> and import it into your stylesheets!</p>
+							<p>The repo for the entire codebase can be found over on <a target="_blank" title="Cattle Grid on Gitlab" href="https://gitlab.com/Ceryni/cattle-grid">GitLab <span class="fa fa-gitlab" aria-hidden="true"></span></a>
 						</div>
 					</div>
 					<div id="grid"></div>
@@ -147,37 +147,37 @@ All rights reserved. -->
 						<div class="columns small-12">
 							<hr/>
 							<h1>
-								Level 1 heading
+								Cattle Grid | A simple, configurable CSS Flexbox Framework
 							</h1>
 							<p>
 								H1 Headline at 40px
 							</p>
 							<h2>
-								Level 02 Heading
+								Cattle Grid | A simple, configurable CSS Flexbox Framework
 							</h2>
 							<p>
 								H2 Headline at 30px
 							</p>
 							<h3>
-								Level 03 Heading
+								Cattle Grid | A simple, configurable CSS Flexbox Framework
 							</h3>
 							<p>
 								H3 Headline at 25px
 							</p>
 							<h4>
-								Level 04 Heading
+								Cattle Grid | A simple, configurable CSS Flexbox Framework
 							</h4>
 							<p>
 								H4 Headline at 20px
 							</p>
 							<h5>
-								Level 05 Heading
+								Cattle Grid | A simple, configurable CSS Flexbox Framework
 							</h5>
 							<p>
 								H5 Headline at 18px
 							</p>
 							<h6>
-								Level 06 Heading
+								Cattle Grid | A simple, configurable CSS Flexbox Framework
 							</h6>
 							<p>
 								H6 Headline at 16px
@@ -278,9 +278,9 @@ All rights reserved. -->
 						<div class="columns small-12">
 							<strong>Block Quotes with Cite</strong>
 							<blockquote>
-								<p><em>Continuining on from above.. </em> The files I've added into the base folder are just things I think could be useful, but they're not a necessity. If you like how this is organised and structured, just wait until you see the <a target="_blank" href="https://www.usecattlegrid.com/wordpress">Wordpress theme</a>!</p>
+								<p><em>Continuining on from above.. </em> The files I've added into the base folder are just things I think could be useful, but they're not a necessity. If you like how this is organised and structured, just wait until you see the <a target="_blank" title="Cattle Grid Wordpress Theme" href="https://www.usecattlegrid.com/wordpress">Wordpress theme</a>!</p>
 								<footer>
-									— <cite><a href="http://www.ceryni.com">Ceryni</a></cite>
+									— <cite><a title="Ceryni.com" href="http://www.ceryni.com">Ceryni</a></cite>
 								</footer>
 							</blockquote>
 							<hr/>
@@ -452,33 +452,33 @@ All rights reserved. -->
 						<div id="buttons"></div>
 						<div class="small-12 columns buttons-links">
 							<strong>Buttons</strong>
-							<a class="button primary"> Primary</a>
-							<a class="button primary hollow"> Primary</a>
-							<a class="button primary rounded"> Rounded</a>
-							<a class="button secondary"> Secondary</a>
-							<a class="button secondary hollow"> Secondary</a>
-							<a class="button secondary rounded"> Rounded</a>
-							<a class="button facebook"> Facebook</a>
-							<a class="button facebook hollow"> Facebook</a>
-							<a class="button facebook rounded"> Rounded</a>
-							<a class="button instagram"> Instagram</a>
-							<a class="button instagram hollow"> Instagram</a>
-							<a class="button instagram rounded"> Rounded</a>
-							<a class="button twitter"> Twitter</a>
-							<a class="button twitter hollow"> Twitter</a>
-							<a class="button twitter rounded"> Rounded</a>
-							<a class="button pinterest"> Pinterest</a>
-							<a class="button pinterest hollow"> Pinterest</a>
-							<a class="button pinterest rounded"> Rounded</a>
+							<a title="Button style Primary" class="button primary"> Primary</a>
+							<a title="Button style Primary Hollow" class="button primary hollow"> Primary</a>
+							<a title="Button style Primary Rounded" class="button primary rounded"> Rounded</a>
+							<a title="Button style Secondary" class="button secondary"> Secondary</a>
+							<a title="Button style Secondary Hollow" class="button secondary hollow"> Secondary</a>
+							<a title="Button style Secondary Rounded" class="button secondary rounded"> Rounded</a>
+							<a title="Button style Facebook" class="button facebook"> Facebook</a>
+							<a title="Button style Facebook Hollow" class="button facebook hollow"> Facebook</a>
+							<a title="Button style Facebook Rounded" class="button facebook rounded"> Rounded</a>
+							<a title="Button style Instagram" class="button instagram"> Instagram</a>
+							<a title="Button style Instagram Hollow" class="button instagram hollow"> Instagram</a>
+							<a title="Button style Instagram Rounded" class="button instagram rounded"> Rounded</a>
+							<a title="Button style Twitter" class="button twitter"> Twitter</a>
+							<a title="Button style Twitter Hollow" class="button twitter hollow"> Twitter</a>
+							<a title="Button style Twitter Rounded" class="button twitter rounded"> Rounded</a>
+							<a title="Button style Pinterest" class="button pinterest"> Pinterest</a>
+							<a title="Button style Pinterest Hollow" class="button pinterest hollow"> Pinterest</a>
+							<a title="Button style Pinterest Rounded" class="button pinterest rounded"> Rounded</a>
 							<strong>Links</strong>
-							<a class="facebook"><span class="fa fa-facebook"></span></a>
-							<a class="instagram"><span class="fa fa-instagram"></span></a>
-							<a class="twitter"><span class="fa fa-twitter"></span></a>
-							<a class="pinterest"><span class="fa fa-pinterest"></span></a>
-							<a class="etsy"><span class="fa fa-etsy"></span></a>
-							<a class="linkedin"><span class="fa fa-linkedin"></span></a>
-							<a class="reddit"><span class="fa fa-reddit"></span></a>
-							<a class="email"><span class="fa fa-email"></span></a>
+							<a title="Link style Facebook" class="facebook"><span class="fa fa-facebook"></span></a>
+							<a title="Link style Instagram" class="instagram"><span class="fa fa-instagram"></span></a>
+							<a title="Link style Twitter" class="twitter"><span class="fa fa-twitter"></span></a>
+							<a title="Link style Pinterest" class="pinterest"><span class="fa fa-pinterest"></span></a>
+							<a title="Link style Etsy" class="etsy"><span class="fa fa-etsy"></span></a>
+							<a title="Link style Linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
+							<a title="Link style Reddit" class="reddit"><span class="fa fa-reddit"></span></a>
+							<a title="Link style Email" class="email"><span class="fa fa-email"></span></a>
 						</div>
 					</div>
 					<div class="row">
@@ -535,7 +535,7 @@ All rights reserved. -->
 				<div class="row align-middle align-center">
 					<div class="small-12 columns text-center">
 						<p class="small">
-							Copyright 2019 Cattle Grid - Proudly Created by <a href="http://ceryni.com" target="_blank">Ceryni</a> <span class="fa fa-heart-o"></span>
+							Copyright 2019 Cattle Grid - Proudly Created by <a title="Ceryni.com" href="http://ceryni.com" target="_blank">Ceryni</a> <span class="fa fa-heart-o"></span>
 						</p>
 					</div>
 				</div>
