--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<meta property="og:description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers"/>
 	<meta property="og:url" content="https://usecattlegrid.com"/>
 	<meta property="og:site_name" content="Cattle Grid"/>
+	<meta property="og:image" content="https://usecattlegrid.com/assets/images/og-cattlegrid.png">
 
 	<!--  Favicons  -->
 	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="./assets/images/apple-touch-icon-57x57.png"/>
