Updated title length

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html class="no-js" lang=""><head>
 	<meta charset="utf-8"/>
 	<meta http-equiv="x-ua-compatible" content="ie=edge"/>
-	<title>Cattle Grid | A simple, configurable CSS Flexbox Framework for Developers</title>
+	<title>Cattle Grid | A simple, configurable CSS Flexbox Framework</title>
 	<meta name="description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers"/>
 	<meta name="keywords" content"cattlegrid, cattle grid, css, framework, flexbox, flexgrid, simple, grid"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -16,10 +16,10 @@
 	<meta name="robots" content="index,follow,noodp"/>
 	<meta name="author" content="ceryni"/>
 	<!--  Schema.org  -->
-	<meta itemprop="name" content="Cattle Grid | A simple, configurable CSS Flexbox Framework for Developers"/>
+	<meta itemprop="name" content="Cattle Grid | A simple, configurable CSS Flexbox Framework"/>
 	<meta itemprop="description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers"/>
 	<!--  Meta Data  -->
-	<meta property="dcterms:title" content="Cattle Grid | A simple, configurable CSS Flexbox Framework for Developers"/>
+	<meta property="dcterms:title" content="Cattle Grid | A simple, configurable CSS Flexbox Framework"/>
 	<meta property="dcterms:description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers"/>
 	<!--  Twitter Cards  -->
 	<meta name="twitter:card" content="summary_large_image"/>
@@ -27,7 +27,7 @@
 	<meta name="twitter:creator" content="@ceryni17"/>
 	<!--  OpenGraph  -->
 	<meta property="og:type" content="website"/>
-	<meta property="og:title" content="Cattle Grid | A simple, configurable CSS Flexbox Framework for Developers"/>
+	<meta property="og:title" content="Cattle Grid | A simple, configurable CSS Flexbox Framework"/>
 	<meta property="og:description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers"/>
 	<meta property="og:url" content="https://usecattlegrid.com"/>
 	<meta property="og:site_name" content="Cattle Grid"/>
