--- a/index.html
+++ b/index.html
@@ -147,37 +147,37 @@
 							<div class="columns small-12">
 								<hr/>
 								<h1>
-									Level 1 heading
+									Cattle Grid | A simple, configurable CSS Flexbox Framework
 								</h1>
 								<p>
 									H1 Headline at 40px
 								</p>
 								<h2>
-									Level 02 Heading
+									Cattle Grid | A simple, configurable CSS Flexbox Framework
 								</h2>
 								<p>
 									H2 Headline at 30px
 								</p>
 								<h3>
-									Level 03 Heading
+									Cattle Grid | A simple, configurable CSS Flexbox Framework
 								</h3>
 								<p>
 									H3 Headline at 25px
 								</p>
 								<h4>
-									Level 04 Heading
+									Cattle Grid | A simple, configurable CSS Flexbox Framework
 								</h4>
 								<p>
 									H4 Headline at 20px
 								</p>
 								<h5>
-									Level 05 Heading
+									Cattle Grid | A simple, configurable CSS Flexbox Framework
 								</h5>
 								<p>
 									H5 Headline at 18px
 								</p>
 								<h6>
-									Level 06 Heading
+									Cattle Grid | A simple, configurable CSS Flexbox Framework
 								</h6>
 								<p>
 									H6 Headline at 16px
