Twitter Meta updates

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
 	<meta property="dcterms:title" content="Cattle Grid | A simple, configurable CSS Flexbox Framework"/>
 	<meta property="dcterms:description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers"/>
 	<!--  Twitter Cards  -->
+	<meta name="twitter:title" content="Cattle Grid | A simple, configurable CSS Flexbox Framework"/>
+	<meta name="twitter:description" content="Extremely Lightweight, Basic Flex CSS Grid Built From Simple Mixins for Developers"/>
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:site" content="@ceryni17"/>
 	<meta name="twitter:creator" content="@ceryni17"/>
+	<meta name="twitter:image" content="https://usecattlegrid.com/assets/images/og-cattlegrid.png"/>
 	<!--  OpenGraph  -->
 	<meta property="og:type" content="website"/>
 	<meta property="og:title" content="Cattle Grid | A simple, configurable CSS Flexbox Framework"/>
