--- a/index.html
+++ b/index.html
@@ -147,43 +147,43 @@
 						</div>
 						<div id="headlines"></div>
 						<div class="row">
-							<div class="columns small-12">
+							<div class="columns small-12 headlines">
 								<hr/>
 								<h1>
 									Cattle Grid | A simple, configurable CSS Flexbox Framework
 								</h1>
 								<p>
-									H1 Headline at 40px
+									H1 Headline at 40px desktop &amp; 30px mobile
 								</p>
 								<h2>
 									Cattle Grid | A simple, configurable CSS Flexbox Framework
 								</h2>
 								<p>
-									H2 Headline at 30px
+									H2 Headline at 30px desktop &amp; 18px mobile
 								</p>
 								<h3>
 									Cattle Grid | A simple, configurable CSS Flexbox Framework
 								</h3>
 								<p>
-									H3 Headline at 25px
+									H3 Headline at 25px desktop &amp; 16px mobile
 								</p>
 								<h4>
 									Cattle Grid | A simple, configurable CSS Flexbox Framework
 								</h4>
 								<p>
-									H4 Headline at 20px
+									H4 Headline at 20px desktop &amp; 16px mobile
 								</p>
 								<h5>
 									Cattle Grid | A simple, configurable CSS Flexbox Framework
 								</h5>
 								<p>
-									H5 Headline at 18px
+									H5 Headline at 18px desktop &amp; 14px mobile
 								</p>
 								<h6>
 									Cattle Grid | A simple, configurable CSS Flexbox Framework
 								</h6>
 								<p>
-									H6 Headline at 16px
+									H6 Headline at 16px desktop &amp; 14px mobile
 								</p>
 								<hr/>
 							</div>
